k8s/django/django-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress-ssl
spec:
  rules:
  - host:
    valueFrom:
      secretKeyRef:
        name: k8s-host
        key: HOST
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: django-clip 
            port:
              number: 8000
  tls:
    - hosts: 
      valueFrom:
        secretKeyRef:
          name: k8s-host
          key: HOST
      secretName: tls-secret
