k8s/django/django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
spec:
  rules:
  - host: 13.93.45.193
  #- host: "django.tsadimas.dns-cloud.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: django-clip 
            port:
              number: 8000
